--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -65,6 +65,116 @@
                     filterType="interval"
                     mandatory="mandatory"
                 />
+				<sfb:ControlConfiguration
+                    id="_IDLotQualite"
+                    key="LotQualite"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDClient"
+                    key="NomClient"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDDescriptionArticle"
+                    key="DescriptionArticle"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDDescGrpMarchandise"
+                    key="DescGrpMarchandise"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDLotFournisseur1"
+                    key="LotFournisseur"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDDevise"
+                    key="Devise"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDMontantAchat"
+                    key="MontantAchat"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDUQVar"
+                    key="UQVar"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDValeurCaracteristique"
+                    key="ValeurCaracteristique"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDFournisseur"
+                    key="Fournisseur"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDExDocument"
+                    key="ExDocument"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDCdeAch"
+                    key="CdeAch"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="ZClient"
+                    key="ZClient"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="IDQuantite"
+                    key="Quantite"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="IDUQDeBase"
+                    key="UQDeBase"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDQteEnUQ"
+                    key="QteEnUQ"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDUQDeSaisie"
+                    key="UQDeSaisie"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDQteEnUQSField"
+                    key="QteEnUQS"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDPoste"
+                    key="Poste"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDValeurCaracteristiqueFilter"
+                    key="ValeurCaracteristique"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDMagasinFilter"
+                    key="Magasin"
+					visible="false"
+                />
+				<sfb:ControlConfiguration
+                    id="_IDNumeroDocr"
+                    key="NumeroDoc"
+					visible="false"
+                />
             </sfb:controlConfiguration>
         </sfb:SmartFilterBar>
         <!-- Table below -->
