--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -23,7 +23,7 @@
             persistencyKey="UniqueAndStablePersistencyKey"
         >
             <sfb:controlConfiguration>
-                <sfb:ControlConfiguration
+                 <sfb:ControlConfiguration
                     id="_IDGenControlConfiguration2"
 					index="1"
                     key="Article"
@@ -63,9 +63,14 @@
                     label="Date comptable"
                     visibleInAdvancedArea="true"
                     filterType="interval"
-                    mandatory="mandatory"
-                />
+                    mandatory="mandatory" 
+                 /> 
 				<sfb:ControlConfiguration
+                    id="_IDLotFournisseur1"
+                    key="LotFournisseur"
+					visible="false"
+                />
+				 <sfb:ControlConfiguration
                     id="_IDLotQualite"
                     key="LotQualite"
 					visible="false"
@@ -85,11 +90,7 @@
                     key="DescGrpMarchandise"
 					visible="false"
                 />
-				<sfb:ControlConfiguration
-                    id="_IDLotFournisseur1"
-                    key="LotFournisseur"
-					visible="false"
-                />
+				
 				<sfb:ControlConfiguration
                     id="_IDDevise"
                     key="Devise"
@@ -174,11 +175,15 @@
                     id="_IDNumeroDocr"
                     key="NumeroDoc"
 					visible="false"
-                />
+                /> 
+				<sfb:ControlConfiguration
+                    id="_IDLotEntreposageExt"
+                    key="LotEntreposageExt"
+					visible="false"
+                /> 
             </sfb:controlConfiguration>
         </sfb:SmartFilterBar>
         <!-- Table below -->
-
 		<html:a id="hiddenLink"></html:a> 
         <table:Table id="table"
 				rows="{/}"
